--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "arg": "^5.0.0",
+    "chalk": "^4.1.1",
+    "esm": "^3.2.25",
+    "inquirer": "^8.1.0",
+    "jsonfile": "^6.1.0",
+    "node-google-translate-skidz": "^1.1.2",
+    "query-string": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -15,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "generate:locale": "node src/scripts/generate-locale",
+    "delete:locale": "node src/scripts/delete-locale"
   },
   "eslintConfig": {
     "extends": [
